tests/snapshots/sfc/ts/basic__computed_and_watch.snap
---
source: crates/vue_compiler_sfc/src/snapshot_tests.rs
assertion_line: 126
expression: ts_output
---
import { defineComponent } from 'vue'
import { openBlock as _openBlock, createElementBlock as _createElementBlock, toDisplayString as _toDisplayString } from "vue"

import { ref, computed, watch } from 'vue'

export default defineComponent({
  name: 'test',
  setup(__props) {

const count = ref(0)
const double = computed(() => count.value * 2)
watch(count, (n) => console.log(n))

return (_ctx, _cache) => {
  return (_openBlock(), _createElementBlock("div", null, _toDisplayString(double.value), 1 /* TEXT */))
}
}

})
