tests/snapshots/sfc/ts/basic__options_api_component.snap
---
source: crates/vue_compiler_sfc/src/snapshot_tests.rs
assertion_line: 126
expression: ts_output
---
import { openBlock as _openBlock, createElementBlock as _createElementBlock, toDisplayString as _toDisplayString } from "vue"


const _sfc_main = {
  data() {
    return { msg: 'hello' }
  }
}

export function render(_ctx, _cache) {
  return (_openBlock(), _createElementBlock("div", null, _toDisplayString(_ctx.msg), 1 /* TEXT */))
}

_sfc_main.render = render
export default _sfc_main
