tests/snapshots/sfc/ts/basic__script_setup_with_scoped_style.snap
---
source: crates/vue_compiler_sfc/src/snapshot_tests.rs
assertion_line: 126
expression: ts_output
---
import { defineComponent } from 'vue'
import { openBlock as _openBlock, createElementBlock as _createElementBlock, toDisplayString as _toDisplayString } from "vue"


const _hoisted_1 = { class: "text" }

const msg = 'hello'

export default defineComponent({
  name: 'test',
  setup(__props) {


return (_ctx, _cache) => {
  return (_openBlock(), _createElementBlock("div", _hoisted_1, _toDisplayString(msg)))
}
}

})
